# VSCode_HelloWorld

./: .gitignore  CMakeLists.txt  MigrateFromAllinOne.md  Readme.md  SetupVScode_readme.md
design/: design.modus
design/GeneratedSource/: cycfg.c  cycfg.h  cycfg.timestamp  cycfg_clocks.c  cycfg_clocks.h  cycfg_notices.h  cycfg_pins.c  cycfg_pins.h  cycfg_routing.c  cycfg_routing.h  cycfg_system.c  cycfg_system.h
source/: main.c
source/OnethinxCore/: LoRaWAN_keys.h
